tests/eu.numberfour.n4js.transpiler.es5.tests/testdata/errors/ThrowFoo_CJS.n4js.xt
/* XPECT_SETUP eu.numberfour.n4js.transpiler.es5.xpect.tests.CompileAndExecuteTest END_SETUP */

/* XPECT outputRegex with CommonJS --- 
<==
stdout:
stderr:
foo(.)*
==>
--- */
throw 'foo'
